# dmc3-inputs-thing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build_vs2017.bat  build_vs2017_debug.bat  build_vs2017_debug_clang.bat  build_vs2017_devmode.bat  build_vs2017_icl_debug.bat  build_vs2017_rdb.bat  build_vs2019.bat  build_vs2019_debug.bat  build_vs2019_devmode.bat  build_vs2019_rdb.bat  build_vs2022_debug.bat  build_vs2022_release.bat  create_mod.bat  create_mod.sh  lsp.bat  smart_create_mod.bat
dependencies/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/meshoptimizer/: CMakeLists.txt
dependencies/spdlog/: CMakeLists.txt  README.md
dinput_proxy_vs2017/: dinp.asm  dinput8.lst  dinput8.sln  dinput8.vcxproj  dinput8.vcxproj.filters  main.cpp  main.def
src/: CMakeLists.txt  D3D9Hook.cpp  D3D9Hook.hpp  DInputHook.cpp  DInputHook.hpp  LicenseStrings.hpp  Main.cpp  Mod.hpp  ModFramework.cpp  ModFramework.hpp  Mods.cpp  Mods.hpp  PromptFontCompressed.cpp  PromptFontCompressed_b85.cpp  PromptFontGlyphs.hpp  Sfx.cpp
src/fw-imgui/: dg.cpp  gs.cpp  qs.cpp  rg.cpp  sm.cpp  ts.cpp
src/mods/: AreaJump.cpp  AreaJump.hpp  AudioStutterFix.cpp  AudioStutterFix.hpp  BulletStop.cpp  BulletStop.hpp  CameraHack.cpp  CameraHack.hpp  CustomAlolcator.cpp  CustomAlolcator.hpp  DebugDraw.cpp  DebugDraw.hpp  EnemySoulEaterNoInvis.cpp  EnemySoulEaterNoInvis.hpp  EnemySpawnRate.cpp  EnemySpawnRate.hpp  EnemyStates.cpp  EnemyStates.hpp  EnemyStepCooldown.cpp  EnemyStepCooldown.hpp  GamepadTriggersFix.cpp  GamepadTriggersFix.hpp  GamepadsFix.cpp  GamepadsFix.hpp  InertiaThings.cpp  InertiaThings.hpp  InputLog.cpp  InputLog.hpp  ModSample.cpp  ModSample.hpp  NoHeightRestriction.cpp  NoHeightRestriction.hpp  PracticeMode.cpp  PracticeMode.hpp  PrintfDebugging.cpp  PrintfDebugging.hpp  QuicksilverShader.cpp  QuicksilverShader.hpp  RendererReplace.cpp  RendererReplace.hpp  (+13 more)
src/sdk/: Devil3.cpp  Devil3.hpp  Offsets.hpp  ReClass.hpp  ReClass_Internal.hpp  VoxObj.hpp
src/utility/: Address.hpp  Compressed.cpp  Compressed.hpp  Config.hpp  ExceptionHandler.cpp  FixedQueue.cpp  FixedQueue.hpp  FunctionHook.cpp  MemArena.cpp  MemArena.hpp  Module.cpp  Module.hpp  SDLGamepad.hpp
